--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "extcode/cart",
     "type": "typo3-cms-extension",
     "description": "Shopping Cart(s) for TYPO3",
-    "homepage": "http://cart.extco.de",
+    "homepage": "http://cart.extdev.de",
     "license": [
         "GPL-2.0+"
     ],
@@ -21,7 +21,7 @@
     "support": {
         "issues": "https://forge.typo3.org/projects/extension-cart"
     },
-    "version": "0.6.2",
+    "version": "0.6.3",
     "require": {
         "php": ">=5.4.0",
         "typo3/cms-core": ">=6.2.0,<8.0"
