--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "support": {
         "issues": "https://forge.typo3.org/projects/extension-cart"
     },
-    "version": "0.21.1",
+    "version": "0.22.0",
     "require": {
         "php": ">=5.4.0",
         "typo3/cms-core": "^6.2 || ^7.6"
@@ -33,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Extcode\\Cart\\": "Classes/"
+            "Extcode\\Cart\\": "Classes"
         }
     },
     "autoload-dev": {
