--- a/composer.json
+++ b/composer.json
@@ -32,12 +32,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Extcode\\Cart\\": "Classes"
+            "Extcode\\Cart\\": "Classes/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Extcode\\Cart\\Tests\\": "Tests",
+            "Extcode\\Cart\\Tests\\": "Tests/",
             "TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests/",
             "TYPO3\\CMS\\Fluid\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/fluid/Tests/"
         }
