--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ sudo: false
 matrix:
   include:
     - php: 7.1
+      env: TYPO3_VERSION=^8.5
+    - php: 7
+      env: TYPO3_VERSION=^8.5
+    - php: 7.1
       env: TYPO3_VERSION=^7.6
     - php: 7
       env: TYPO3_VERSION=^7.6
