[BUGFIX] #30 - change TYPO3_VERSION in travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ sudo: false
 matrix:
   include:
     - php: 7.1
-      env: TYPO3_VERSION=^8.5
+      env: TYPO3_VERSION=dev-master
     - php: 7
-      env: TYPO3_VERSION=^8.5
+      env: TYPO3_VERSION=dev-master
     - php: 7.1
       env: TYPO3_VERSION=^7.6
     - php: 7
@@ -20,6 +20,8 @@ matrix:
       env: TYPO3_VERSION=^6.2
     - php: 5.5
       env: TYPO3_VERSION=^6.2
+  allow_failures:
+    - env: TYPO3_VERSION=dev-master
 
 cache:
   directories:
