[BUGFIX] #71 - fix travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ language: php
 sudo: false
 
 matrix:
+  fast_finish: true
   include:
     - php: 7.1
-      env: TYPO3_VERSION=dev-master
+      env: TYPO3_VERSION=^8
     - php: 7
-      env: TYPO3_VERSION=dev-master
+      env: TYPO3_VERSION=^8
     - php: 7.1
       env: TYPO3_VERSION=^7.6
     - php: 7
@@ -20,8 +21,6 @@ matrix:
       env: TYPO3_VERSION=^6.2
     - php: 5.5
       env: TYPO3_VERSION=^6.2
-  allow_failures:
-    - env: TYPO3_VERSION=dev-master
 
 cache:
   directories:
@@ -37,26 +36,23 @@ notifications:
     - travis@extco.de
 
 before_install:
-  - phpenv config-rm xdebug.ini || echo "xdebug not available"
+  - echo $TRAVIS_PHP_VERSION
+  - if php -i | grep -q xdebug; then phpenv config-rm xdebug.ini; fi
   - composer self-update
   - composer --version
 
 before_script:
-  - >
-    if [ -n "$TRAVIS_TAG" ]; then
-      composer set-version $TRAVIS_TAG
-      # If this fails, we forgot to update version numbers before tagging the release
-      test -z "$(git diff --shortstat 2> /dev/null | tail -n1)";
-    fi
   - composer require typo3/cms=$TYPO3_VERSION
+  - git checkout composer.json
   - export TYPO3_PATH_WEB="$PWD/.Build/Web"
-  - ln -s Scripts/typo3cms typo3cms
+  - if [ -d .Build/vendor/typo3/cms/components/testing_framework/Resources/Core/Build ]; then export TYPO3_BUILD_DIR=".Build/vendor/typo3/cms/components/testing_framework/Resources/Core/Build"; else export TYPO3_BUILD_DIR=".Build/vendor/typo3/cms/typo3/sysext/core/Build"; fi
 
 script:
   - >
     echo;
     echo "Running unit tests";
-    .Build/bin/phpunit -c .Build/vendor/typo3/cms/typo3/sysext/core/Build/UnitTests.xml Tests/Unit/
+    .Build/bin/phpunit --colors -c $TYPO3_BUILD_DIR/UnitTests.xml Tests/Unit/
+
   - >
     echo;
     echo "Running php lint";
