[TASK] #78 - use testing framework instead of typo3 source

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require-dev": {
         "namelesscoder/typo3-repository-client": "^1.2.0",
+        "nimut/testing-framework": "^1.0",
         "mikey179/vfsStream": "~1.6.0",
         "phpunit/phpunit": "~4.8.0"
     },
@@ -46,9 +47,6 @@
         "cart": "self.version"
     },
     "config": {
-        "preferred-install": {
-            "typo3/cms": "source"
-        },
         "vendor-dir": ".Build/vendor",
         "bin-dir": ".Build/bin"
     },
