--- a/.travis.yml
+++ b/.travis.yml
@@ -45,13 +45,12 @@ before_script:
   - composer require typo3/cms=$TYPO3_VERSION
   - git checkout composer.json
   - export TYPO3_PATH_WEB="$PWD/.Build/Web"
-  - if [ -d .Build/vendor/typo3/cms/components/testing_framework/Resources/Core/Build ]; then export TYPO3_BUILD_DIR=".Build/vendor/typo3/cms/components/testing_framework/Resources/Core/Build"; else export TYPO3_BUILD_DIR=".Build/vendor/typo3/cms/typo3/sysext/core/Build"; fi
 
 script:
   - >
     echo;
     echo "Running unit tests";
-    .Build/bin/phpunit --colors -c $TYPO3_BUILD_DIR/UnitTests.xml Tests/Unit/
+    .Build/bin/phpunit --colors -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/
 
   - >
     echo;
