--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "namelesscoder/typo3-repository-client": "^1.2.0",
         "nimut/testing-framework": "^1.0",
         "mikey179/vfsStream": "~1.6.0",
-        "phpunit/phpunit": "~4.8.0"
+        "phpunit/phpunit": "~4.8.0",
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "autoload": {
         "psr-4": {
