--- a/.travis.yml
+++ b/.travis.yml
@@ -56,3 +56,8 @@ script:
     echo;
     echo "Running php lint";
     find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null \;
+
+  - >
+    echo;
+    echo "Running php-cs-fixer";
+    .Build/bin/php-cs-fixer fix --config=Build/.php_cs -v --dry-run --using-cache=no --path-mode=intersection ./;
