[TASK] #108 - add functional testing to travis ci and gitlab ci

--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,14 @@
         }
     ],
     "support": {
-        "issues": "https://forge.typo3.org/projects/extension-cart"
+        "issues": "https://github.com/extcode/cart/issues"
     },
     "require": {
         "php": ">=5.4.0",
         "typo3/cms": "^6.2 || ^7.6 || ^8.7"
     },
     "require-dev": {
-        "namelesscoder/typo3-repository-client": "^1.2.0",
         "nimut/testing-framework": "^1.0",
-        "mikey179/vfsStream": "~1.6.0",
         "phpunit/phpunit": "~4.8.0",
         "friendsofphp/php-cs-fixer": "^2.0"
     },
@@ -39,9 +37,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Extcode\\Cart\\Tests\\": "Tests/",
-            "TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests/",
-            "TYPO3\\CMS\\Fluid\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/fluid/Tests/"
+            "Extcode\\Cart\\Tests\\": "Tests"
         }
     },
     "replace": {
@@ -51,13 +47,16 @@
         "vendor-dir": ".Build/vendor",
         "bin-dir": ".Build/bin"
     },
+    "scripts": {
+        "post-autoload-dump": [
+            "mkdir -p .Build/Web/typo3conf/ext/",
+            "[ -L .Build/Web/typo3conf/ext/cart ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/cart"
+        ]
+    },
     "extra": {
         "typo3/cms": {
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "web-dir": ".Build/Web",
-            "Package": {
-                "partOfMinimalUsableSystem": true
-            }
+            "web-dir": ".Build/Web"
         }
     }
 }
