--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,16 @@ cache:
     - .composer/
     - .php_cs.cache
 
+variables:
+  COMPOSER_CACHE_DIR: ".composer"
+  TYPO3_PATH_WEB: "$CI_PROJECT_DIR/.Build/Web"
+  MYSQL_DATABASE: "typo3"
+  MYSQL_ROOT_PASSWORD: "joh316"
+  typo3DatabaseName: "typo3"
+  typo3DatabaseHost: "mysql"
+  typo3DatabaseUsername: "root"
+  typo3DatabasePassword: "joh316"
+
 before_script:
   - apk add git --update
 
@@ -17,30 +27,28 @@ test:cgl:
   - composer remove typo3/cms-core --no-update
   - composer install
   script:
-  - pwd
-  - ls .Build/bin/
   - .Build/bin/php-cs-fixer fix --config=Build/.php_cs -v --dry-run --using-cache=no --path-mode=intersection ./
 
 .test: &test_php
   stage: test
+  services:
+  - mysql:5
   image: php:$DOCKER_TAG
   only:
     - branches
   before_script:
     - apk --no-cache add bash curl git mercurial openssh openssl parallel subversion tini
     - docker-php-ext-install mysqli
-    - export TYPO3_PATH_WEB="$PWD/.Build/Web"
-    - export COMPOSER_CACHE_DIR=.composer
-    - curl -OLs https://composer.github.io/installer.sig
+    - wget https://composer.github.io/installer.sig -O - -q | tr -d '\n' > installer.sig
     - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
     - php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('installer.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
     - php composer-setup.php --no-ansi --install-dir=/usr/bin --filename=composer
     - php -r "unlink('composer-setup.php'); unlink('installer.sig');"
-    - composer require typo3/cms="${TYPO3_VERSION}" --update-with-dependencies
-    - composer require nimut/testing-framework
+    - composer require typo3/cms="${TYPO3_VERSION}"
   script:
     - .Build/bin/phpunit -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit
     - find . -name \*.php ! -path "./.Build/*" | parallel --gnu php -d display_errors=stderr -l {} > /dev/null
+    - find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --colors  -c .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml {}'
 
 # Tests in PHP 5.6 and TYPO3 6.2
 test:php56:typo3_62:
