--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "issues": "https://github.com/extcode/cart/issues"
     },
     "require": {
-        "php": ">=5.4.0",
-        "typo3/cms": "^6.2 || ^7.6 || ^8.7"
+        "php": ">=5.6.0",
+        "typo3/cms": "^7.6 || ^8.7"
     },
     "require-dev": {
         "nimut/testing-framework": "^1.0",
