--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 cache:
-  key: "$CI_COMMIT_REF_NAME/$CI_JOB_STAGE"
+  key: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
   paths:
     - .composer/
     - .php_cs.cache
@@ -18,11 +18,13 @@ before_script:
   - apk add git --update
 
 stages:
+  - cgl
   - test
+  - analysis
 
 test:cgl:
   image: composer:1.3
-  stage: test
+  stage: cgl
   before_script:
   - composer remove typo3/cms-core --no-update
   - composer install
@@ -84,3 +86,33 @@ test:php71:typo3_8:
   variables:
     DOCKER_TAG: 7.1-alpine
     TYPO3_VERSION: ^8.7
+
+sonarqube:
+  stage: analysis
+  image: ciricihq/gitlab-sonar-scanner
+  variables:
+    SONAR_URL: "https://sonar.extco.de"
+    SONAR_PROJECT_NAME: "$CI_PROJECT_NAME"
+    SONAR_PROJECT_KEY: "cart-4.x"
+    SONAR_TOKEN: "$SONAR_TOKEN"
+    SONAR_PROJECT_VERSION: "$CI_JOB_ID"
+    SONAR_ANALYSIS_MODE: "issues"
+    SONAR_SOURCES: "./Classes"
+    SONAR_GITLAB_PROJECT_ID: "$CI_PROJECT_ID"
+  script:
+  - /usr/bin/sonar-scanner-run.sh
+  allow_failure: true
+
+sonarqube-reports:
+  stage: analysis
+  image: ciricihq/gitlab-sonar-scanner
+  variables:
+    SONAR_URL: "https://sonar.extco.de"
+    SONAR_PROJECT_NAME: "$CI_PROJECT_NAME"
+    SONAR_PROJECT_KEY: "cart-4.x"
+    SONAR_TOKEN: "$SONAR_TOKEN"
+    SONAR_PROJECT_VERSION: "$CI_JOB_ID"
+    SONAR_ANALYSIS_MODE: "publish"
+    SONAR_SOURCES: "./Classes"
+  script:
+  - unset CI_BUILD_REF && /usr/bin/sonar-scanner-run.sh
