[FIX] #170 - replace GPL-2.0+ by GPL-2.0-or-later in composer.json

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Shopping Cart(s) for TYPO3",
     "homepage": "https://cart.extco.de",
     "license": [
-        "GPL-2.0+"
+        "GPL-2.0-or-later"
     ],
     "keywords": [
         "TYPO3 CMS",
