--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
         "issues": "https://github.com/extcode/cart/issues"
     },
     "require": {
-        "typo3/cms-core": "^8.7 || ^9.3"
+        "typo3/cms-core": "^9.3"
     },
     "require-dev": {
-        "nimut/testing-framework": "^2.0 || ^3.0 || ^4.0",
+        "nimut/testing-framework": "^4.0",
         "friendsofphp/php-cs-fixer": "^2.0"
     },
     "autoload": {
