--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require": {
         "php": ">=7.0.0 <7.3",
-        "typo3/cms-core": "^8.7"
+        "typo3/cms-core": "^8.7",
+        "typo3/cms-form": "^8.7"
     },
     "require-dev": {
         "nimut/testing-framework": "^2.0 || ^3.0 || ^4.0",
