--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -2,7 +2,7 @@
 
 project     = Shopping Cart(s) for TYPO3
 version     = 6.0
-release     = 6.0.1
+release     = 6.1.5
 t3author    = Daniel Lorenz
 copyright   = 2013-2021
 
@@ -14,6 +14,8 @@ description =
 project_issues       = https://github.com/extcode/cart/issues
 project_repository   = https://github.com/extcode/cart
 
+[extlinks]
+issue = https://github.com/extcode/cart/issues/%s | Issue #
 
 [intersphinx_mapping]
 
