--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "issues": "https://github.com/extcode/cart/issues"
     },
     "require": {
-        "php": ">=7.0.0 <7.3",
+        "php": "^7.0 <7.4",
         "typo3/cms-core": "^8.7",
         "typo3/cms-form": "^8.7"
     },
