--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ matrix:
   fast_finish: true
   include:
     - php: 7.2
-      env: TYPO3_VERSION=^9.3
+      env: TYPO3_VERSION=^9.5
+    - php: 7.3
+      env: TYPO3_VERSION=^9.5
 
 cache:
   directories:
