[TASK] Declare extension compatible with PHP 7.4
Resolves: #267

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,12 @@ lint:php73:
   script:
     - find . -name \*.php -exec php -l "{}" \;
 
+lint:php74:
+  stage: lint
+  image: php:7.4-alpine
+  script:
+    - find . -name \*.php -exec php -l "{}" \;
+
 .test: &test_php
   stage: test
   services:
@@ -104,7 +110,7 @@ test:php72:typo3_9:
   variables:
     DOCKER_TAG: 7.2-alpine
     TYPO3_VERSION: ^9.5
-    COVERAGE: 1
+    COVERAGE: 0
 
 # Build in PHP 7.3 and TYPO3 9.5
 test:php73:typo3_9:
@@ -113,6 +119,14 @@ test:php73:typo3_9:
     DOCKER_TAG: 7.3-alpine
     TYPO3_VERSION: ^9.5
     COVERAGE: 0
+
+# Build in PHP 7.4 and TYPO3 9.5
+test:php74:typo3_9:
+  <<: *test_php
+  variables:
+    DOCKER_TAG: 7.4-alpine
+    TYPO3_VERSION: ^9.5
+    COVERAGE: 1
 
 sonarqube:
   stage: analysis
