[TASK] Declare extension compatible with PHP 7.4
Resolves: #267

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,12 @@ lint:php73:
   script:
     - find . -name \*.php -exec php -l "{}" \;
 
+lint:php74:
+  stage: lint
+  image: php:7.4-alpine
+  script:
+    - find . -name \*.php -exec php -l "{}" \;
+
 .test: &test_php
   stage: test
   services:
@@ -139,6 +145,14 @@ test:php73:typo3_8:
   <<: *test_php
   variables:
     DOCKER_TAG: 7.3-alpine
+    TYPO3_VERSION: ^8.7
+    COVERAGE: 0
+
+# Build in PHP 7.4 and TYPO3 8.7
+test:php74:typo3_8:
+  <<: *test_php
+  variables:
+    DOCKER_TAG: 7.4-alpine
     TYPO3_VERSION: ^8.7
     COVERAGE: 1
 
