--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,9 +1,9 @@
 [general]
 
 project     = Shopping Cart(s) for TYPO3
-version     = 5.5
-release     = 5.5.2
-t3author    = Daniel Lorenz
+version     = 5.6
+release     = 5.6.0
+t3author    = Daniel Gohlke
 copyright   = 2013-2021
 
 description =
