[BUGFIX] Fix replace configuration without vendor
Resolves: #268

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         }
     },
     "replace": {
-        "cart": "self.version"
+        "extcode/cart": "self.version"
     },
     "config": {
         "vendor-dir": ".Build/vendor",
