--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,15 @@
     },
     "require": {
         "php": ">=7.2.0 <7.5",
+        "ext-openssl": "*",
         "typo3/cms-core": "^9.5",
         "typo3/cms-form": "^9.5"
     },
     "require-dev": {
-        "nimut/testing-framework": "^4.0",
-        "friendsofphp/php-cs-fixer": "^2.0",
-        "helmich/typo3-typoscript-lint": "^1.4"
+        "typo3/testing-framework": "^4.0",
+        "friendsofphp/php-cs-fixer": "^2.14",
+        "helmich/typo3-typoscript-lint": "^2.0",
+        "overtrue/phplint": "^1.1"
     },
     "autoload": {
         "psr-4": {
