--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
     },
     "require": {
         "php": ">=7.2.0 <7.5",
+        "ext-json": "*",
         "ext-openssl": "*",
         "typo3/cms-core": "^9.5",
         "typo3/cms-form": "^9.5"
