[TASK] Prepare documentation for TYPO3 v10
Related: #288

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,13 +1,8 @@
 [general]
 
 project     = Shopping Cart(s) for TYPO3
-version     = 5.6
-release     = 5.6.0
-t3author    = Daniel Gohlke
-copyright   = 2013-2021
-
-description =
-
+release     = 5.8.0
+t3author    = 2013-2023 by Daniel Gohlke
 
 [html_theme_options]
 
