--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,13 +1,8 @@
 [general]
 
 project     = Shopping Cart(s) for TYPO3
-version     = 6.7
-release     = 6.7.0
-t3author    = Daniel Gohlke
-copyright   = 2013-2021
-
-description =
-
+release     = 6.9.0
+t3author    = 2013-2023 by Daniel Gohlke
 
 [html_theme_options]
 
