[TASK] Move Widget Configuration to Service.php
The extension only suggest installing typo3/cms-dashboard. The
dependency injection can only be done depending on the loaded
dashboard extension.
Replace some widget configuration from .yaml to .php.

Resolves: #313

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Extcode\\Cart\\": "Classes/"
+            "Extcode\\Cart\\": "Classes/",
+            "Extcode\\Cart\\Configuration\\": "Configuration/"
         }
     },
     "autoload-dev": {
