--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -8,35 +8,35 @@ services:
     resource: '../Classes/*'
     exclude: '../Classes/Widgets/*'
 
-  Extcode\Cart\Domain\Finisher\Order\ClearCartFinisher:
+  Extcode\Cart\EventListener\ProcessOrderCreate\ClearCart:
     tags:
       - name: event.listener
-        identifier: 'cart-clear-cart-finisher'
+        identifier: 'cart--process-order-create--clear-cart'
         event: Extcode\Cart\Event\ProcessOrderCreateEvent
 
-  Extcode\Cart\Domain\Finisher\Order\EmailFinisher:
+  Extcode\Cart\EventListener\ProcessOrderCreate\Email:
     tags:
       - name: event.listener
-        identifier: 'cart-email-finisher'
+        identifier: 'cart--process-order-create--email'
         event: Extcode\Cart\Event\ProcessOrderCreateEvent
-        after: 'cart-order-finisher'
-        before: 'cart-clear-cart-finisher'
+        after: 'cart--process-order-create--order'
+        before: 'cart--process-order-create--clear-cart'
 
-  Extcode\Cart\Domain\Finisher\Order\OrderFinisher:
+  Extcode\Cart\EventListener\ProcessOrderCreate\Order:
     tags:
       - name: event.listener
-        identifier: 'cart-order-finisher'
+        identifier: 'cart--process-order-create--order'
         event: Extcode\Cart\Event\ProcessOrderCreateEvent
-        before: 'cart-order-number-finisher'
+        before: 'cart--process-order-create--order-number'
 
-  Extcode\Cart\Domain\Finisher\Order\OrderNumberFinisher:
+  Extcode\Cart\EventListener\ProcessOrderCreate\OrderNumber:
     arguments:
       $persistenceManager: '@TYPO3\CMS\Extbase\Persistence\Generic\PersistenceManager'
     tags:
       - name: event.listener
-        identifier: 'cart-order-number-finisher'
+        identifier: 'cart--process-order-create--order-number'
         event: Extcode\Cart\Event\ProcessOrderCreateEvent
-        after: 'cart-order-finisher'
+        after: 'cart--process-order-create--order'
 
   Extcode\Cart\Service\TaxClassService:
     public: true
