[FEATURE] Taxation of Service Cost as an Ancillary Service
- allow tax class definition -1 for services to
  use the highest used tax class in cart
- allow tax class definition -2 for taxes calculated as a
  percentage of the tax of the products in the shopping cart

Resolves: #339

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,7 +95,7 @@ lint:php74:
       fi
     - >
       if [[ "$COVERAGE" == "1" ]]; then
-        .build/bin/phpunit --coverage-clover=phpunit.coverage.xml --log-junit=phpunit.report.xml -c Build/UnitTests.xml
+        XDEBUG_MODE=coverage .build/bin/phpunit --coverage-clover=phpunit.coverage.xml --log-junit=phpunit.report.xml -c Build/UnitTests.xml
       fi
     - typo3DatabaseDriver=pdo_sqlite .build/bin/phpunit -c Build/FunctionalTests.xml
   artifacts:
